Fix spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -576,6 +576,8 @@ body {
 
   .card-grid {
     grid-column-gap: 0.5rem;
+    grid-row-gap: 0.5rem;
+    margin: 0.25rem;
   }
 
 }
